fix api response

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
+    "cloudinary": "^2.1.0",
     "express": "^4.19.2",
-    "prisma": "^5.12.1",
-    "xior": "^0.3.12"
+    "prisma": "^5.12.1"
   }
 }
