add facebook api

--- a/.env.exaample
+++ b/.env.exaample
@@ -1,23 +1,26 @@
-# CopyWriting
-DIFY_API_KEY=KEY
+LINE_BOT=on
+FACEBOOK_BOT=on
 
-# Adaptive English
-# DIFY_API_KEY=KEY
-
-# MANA
-# DIFY_API_KEY=KEY
+# DIFY API
+DIFY_API_KEY=key
 
 
 ### Line ###
-LINE_ACCESS_TOKEN=TOKEN
-LINE_SECRET_TOKEN=TOKEN
-
+LINE_ACCESS_TOKEN=token
+LINE_SECRET_TOKEN=token
 
 ### Database ###
-DATABASE="postgres://EXAMPLE"
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+DATABASE="postgres connection string"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+### CLOUDINARY ###
+CLOUDINARY_KEY="Key"
+CLOUDINARY_SECRET="Secret"
+CLOUDINARY_URL="url"
+CLOUDINARY_NAME="name"
+
+
+### Facebook ####
+FB_VERIFY_TOEKN=token
+FB_TOKEN=token
+FB_PAGE_ID=id
