--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "prisma": "^5.12.1"
   }
