--- a/.env.exaample
+++ b/.env.exaample
@@ -5,6 +5,11 @@ FACEBOOK_BOT=on
 DIFY_API_KEY=key
 
 
+###### Openai ######
+OPENAI_ASSISTANT_ID=Assiatant_id
+
+
+
 ### Line ###
 LINE_ACCESS_TOKEN=token
 LINE_SECRET_TOKEN=token
