--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "prisma": "^5.12.1"
+    "nodemon": "^3.1.3",
+    "openai": "^4.47.3",
+    "prisma": "^5.12.1",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
