--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
