--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ CLOUDINARY_NAME="name"
 FB_VERIFY_TOEKN=token
 FB_TOKEN=token
 FB_PAGE_ID=id
+
+### psasword for delete chat ###
+MASTER_PASSWORD=yourpassword
