--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.47.3",
     "prisma": "^5.12.1",
     "to": "^0.2.9",
-    "update": "^0.7.4"
+    "update": "^0.7.4",
+    "uuid": "^11.0.2"
   }
 }
